# agentic-rag-framework-generalized-actions

./: .env.example  LICENSE  README.md  agentic_rag_framework.ipynb  pyproject.toml  requirements.txt
src/: __init__.py  agents.py  config.py  documents.py  graph.py  main.py  tools.py
