[project]
name = "agentic-rag-framework-generalized-actions"
version = "0.1.0"
description = "Agentic RAG workflow with a ReAct-style THOUGHT/ACTION/ANSWER action protocol over Lilian Weng's blog posts, built with LangChain and LangGraph."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=1.4.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "beautifulsoup4>=4.15.0",
    "requests>=2.34.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]

[project.scripts]
agentic-rag = "agentic_rag_framework_generalized_actions.main:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agentic_rag_framework_generalized_actions"]

[tool.setuptools.package-dir]
agentic_rag_framework_generalized_actions = "src"
